gcc/testsuite/gfortran.dg/dynamic_dispatch_3.f03
@@ -15,7 +15,6 @@ module m1
     procedure, pass :: make_integer
     procedure, pass :: prod => i_m_j
     generic, public :: extract => real, make_integer
-    generic, public :: base_extract => real, make_integer
   end type t1
 contains
   real function make_real (arg)
@@ -41,9 +40,8 @@ module m2
     integer :: j = 99
   contains
     procedure, pass :: real => make_real2
-    procedure, pass :: make_integer_2
+    procedure, pass :: make_integer => make_integer_2
     procedure, pass :: prod => i_m_j_2
-    generic, public :: extract => real, make_integer_2
   end type t2
 contains
   real function make_real2 (arg)
@@ -76,16 +74,13 @@ end module m2
   if (a%real() .ne. real (42)) call abort
   if (a%prod() .ne. 42) call abort
   if (a%extract (2) .ne. 84) call abort
-  if (a%base_extract (2) .ne. 84) call abort
   a => c                                   ! extension in module m2
   if (a%real() .ne. real (99)) call abort
   if (a%prod() .ne. 99) call abort
   if (a%extract (3) .ne. 297) call abort
-  if (a%base_extract (3) .ne. 126) call abort
   a => d                                   ! extension in main
   if (a%real() .ne. real (42)) call abort
   if (a%prod() .ne. 42) call abort
   if (a%extract (4) .ne. 168) call abort
-  if (a%base_extract (4) .ne. 168) call abort
 end
 ! { dg-final { cleanup-modules "m1, m2" } }
